fix: dashboard hiding behind blur background

--- a/client/src/app/modules/restricted/restricted.component.scss
+++ b/client/src/app/modules/restricted/restricted.component.scss
@@ -119,6 +119,15 @@ $square-styles: (
   }
 }
 
+.container {
+  @include fill-parent;
+  content: "";
+  @include abs-start;
+  @include flex-center;
+
+  z-index: 3;
+}
+
 //// floating-icons
 @keyframes fade-out-upwards {
   0% {
