--- a/client/src/app/modules/restricted/submodules/auth/auth.component.scss
+++ b/client/src/app/modules/restricted/submodules/auth/auth.component.scss
@@ -1,14 +1,7 @@
 @use "./../../../../../styles/main.scss" as *;
 
 .container {
-  @include fill-parent;
-  content: "";
-  @include abs-start;
-  @include flex-center;
-
   flex-direction: column;
-
-  z-index: 3;
 
   & :not(:last-child) {
     margin-bottom: 4.8rem;
@@ -29,6 +22,8 @@
 
   height: 14rem;
   width: 10rem;
+}
 
+.text {
   text-align: center;
 }
